Add checkin APIs. Update Checkin and Attendance
